Починил попапы на странице администрирования преподавателей

--- a/views/css/educators.css
+++ b/views/css/educators.css
@@ -1,5 +1,6 @@
 @import url("../shared/styles/shared.css");
 @import url("../css/admin.css");
+@import url("./popups.css");
 
 h1 {
   font-size: 30px;
