Добавить страницы управления кафедрами и дисциплинами для администраторов

--- a/views/html/educators.html
+++ b/views/html/educators.html
@@ -9,22 +9,28 @@
       integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="../shared/styles/admin.css" />
+    <link rel="stylesheet" href="../shared/styles/popups.css" />
+    <link rel="stylesheet" href="../shared/styles/shared.css" />
     <title>Преподаватели</title>
   </head>
   <body>
     <div class="container">
       <div class="sidebar">
         <div class="action current-action">
-          <a href="">Преподаватели</a>
+          <a href="#">Преподаватели</a>
         </div>
         <div class="action">
-          <a href="">Дисциплины</a>
+          <a href="./disciplines.html">Дисциплины</a>
         </div>
         <div class="action">
-          <a href="">Кафедры</a>
+          <a href="./departments.html">Кафедры</a>
         </div>
         <div class="action">
           <a href="">Группы</a>
+        </div>
+        <div class="action">
+          <a href="">Расписание</a>
         </div>
       </div>
       <div class="content">
