--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -76,7 +76,7 @@ h1 {
   margin-top: 30px;
 }
 
-.search {
+#search {
   background: transparent;
   border-bottom: 1px solid #8ab6f9;
   width: 300px;
