--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -2,6 +2,13 @@
   display: flex;
 }
 
+.department {
+  text-align: left;
+  font-size: 24px;
+  font-weight: 400;
+  margin: 20px;
+}
+
 .sidebar {
   height: 100vh;
   padding: 0px 10px;
