--- a/public/css/schedule.css
+++ b/public/css/schedule.css
@@ -11,6 +11,29 @@
   height: 100%;
 }
 
+.header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.lesson__delete {
+  text-decoration: underline;
+  color: red;
+  left: 5px;
+  top: 5px;
+}
+
+.add-lesson {
+  border-radius: 50%;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  background-color: #8ab6f9;
+  width: 40px;
+  height: 40px;
+  font-size: 24px;
+  font-weight: bold;
+}
+
 body {
   padding: 10% 20%;
 }
